kubernetes/argocd2/Overlays/Dev/tasks-ingress-dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task-service-ingress
  namespace: webapp
spec:
  ingressClassName: nginx
  rules:
  - host: tasks-dev.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tasks-service
            port:
              number: 8000
